--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="ja">
 
 <head>
-
     <style>
         body {
             padding: 0;
             margin: 0;
+            font-family: sans-serif;
         }
 
         .fudas {
             font-size: 120px;
-            margin: 0.5em;
+            margin: 0.3em;
             margin-left: 50%;
             -moz-transform: translateX(-50%);
             transform: translateX(-50%);
@@ -30,6 +30,7 @@
         }
     </style>
     <meta name="viewport" content="width=480">
+    <meta charset="utf-8">
 </head>
 
 <body>
