font size adjustment

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             line-height: 1;
         }
 
+        .fudas .yareta {
+            font-size: 180px;
+        }
+
         .yaretatohaienai {
             color: #ff0000;
         }
